fix overflow hidden on body problem

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,7 @@
+#mainContainer {
+  overflow-x: hidden;
+}
+
 #sidebar {
   width: 20rem;
   height: 100vh;
